# piccolo

./: Makefile  README.md  build.sh
conf/: mpi-cluster
include/: piccolo.h
include/piccolo/: dense-table.h  kernel.h  master.h  sparse-table.h  table-inl.h  table.h  worker.h
include/util/: common.h  file.h  hash.h  marshal.h  rpc.h  static-initializers.h  stats.h  stringpiece.h  timer.h  tuple.h
src/: Makefile.am  kernel.cc  master.cc  piccolo.proto  table.cc  worker.cc
src/examples/: examples.h  examples.proto  isort.cc  k-means.cc  main.cc  matmul.cc  n-body.cc  pagerank.cc  shortest-path.cc  simple-program.cc  wordcount.cc
src/examples/crawler/: crawler.py  tlds.py
src/util/: common.cc  file.cc  rpc.cc  static-initializers.cc  stringpiece.cc
src/wrap/python/: python_support.cc  python_support.h  python_support.swig
